[project]
name = "llms-txt-action"
version = "0.1.0"
description = "A GitHub Action to crawl a site and generate a llms.txt file."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx",
    "beautifulsoup4",
    "lxml",
    "firecrawl-py"
]

[project.optional-dependencies]
dev = [
    "commitizen",
    "pre-commit",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version"
]

[dependency-groups]
dev = [
    "commitizen>=4.8.3",
    "pre-commit>=4.2.0",
    "ruff>=0.12.3",
    "ty>=0.0.1a14",
]
